kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-app
  namespace: homework
  labels:
    app: homework-app
spec:
  #type: ClusterIP
  #ports:
  #  - port: 80
  #    targetPort: 8000
  #    protocol: TCP 
  type: NodePort 
  ports: 
    - port: 80 
      targetPort: 8000
      nodePort: 30007
  selector:
    app: homework-app
